# ChangeLog for dev-util/shtool
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/shtool/ChangeLog,v 1.10 2004/11/14 03:51:21 ka0ttic Exp $

  13 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> shtool-2.0.1.ebuild:
  Marked stable on x86.

  23 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> shtool-2.0.0.ebuild:
  Stable on sparc

*shtool-2.0.1 (23 Sep 2004)

  23 Sep 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml,
  shtool-2.0.0.ebuild, +shtool-2.0.1.ebuild:
  Version bump to 2.0.1; Marked 2.0.0 stable on x86.

  17 Jul 2004; David Holm <dholm@gentoo.org> shtool-2.0.0.ebuild:
  Added to ~ppc.

*shtool-2.0.0 (13 Jul 2004)

  13 Jul 2004; Seemant Kulleen <seemant@gentoo.org> +shtool-2.0.0.ebuild:
  Version bump, thanks to: Josh Glover <jmglov@gentoo.org> in bug #56889

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*shtool-1.5.1-r2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.