@@ -1,10 +1,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-flac/Attic/gst-plugins-flac-0.8.5.ebuild,v 1.6 2004/11/15 00:25:50 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-flac/Attic/gst-plugins-flac-0.8.5.ebuild,v 1.7 2004/11/15 13:31:11 gustavoz Exp $
 
 inherit gst-plugins
 
-KEYWORDS="x86 alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~sparc"
+KEYWORDS="x86 alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc sparc"
 IUSE=""
 
 DEPEND="media-libs/flac"
