@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-flac
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-flac/ChangeLog,v 1.14 2004/11/15 00:25:50 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-flac/ChangeLog,v 1.15 2004/11/15 13:31:11 gustavoz Exp $
+
+  15 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
+  gst-plugins-flac-0.8.5.ebuild:
+  Stable on sparc
 
   15 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
   gst-plugins-flac-0.8.5.ebuild:
