@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/shtool
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/shtool/ChangeLog,v 1.10 2004/11/14 03:51:21 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/shtool/ChangeLog,v 1.11 2004/11/15 13:27:13 gustavoz Exp $
+
+  15 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> shtool-2.0.1.ebuild:
+  Stable on sparc
 
   13 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> shtool-2.0.1.ebuild:
   Marked stable on x86.
